--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,12 @@
       <version>4.3.8.RELEASE</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.springframework/spring-web -->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-web</artifactId>
+      <version>5.0.4.RELEASE</version>
+    </dependency>
 
     <dependency>
       <groupId>org.hibernate</groupId>
